# sfml_algorithmus

./: .clang-tidy  CMakeLists.txt  LICENSE  Makefile  README.md
src/: button.cpp  main.cpp  window.cpp
src/include/: button.hpp  main.hpp  window.hpp
